refactor: swagger config 수정