@@ -7,6 +7,7 @@ import dynamicquad.agilehub.global.filter.OAuth2SuccessHandler;
 import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -21,6 +22,7 @@ import org.springframework.web.cors.CorsConfiguration;
 
 @Configuration
 @RequiredArgsConstructor
+@Slf4j
 public class SpringSecurityConfig {
 
     private final OAuth2SuccessHandler oAuth2SuccessHandler;
@@ -38,37 +40,37 @@ public class SpringSecurityConfig {
 
         // csrf disable 처리 : 추후 설정 변경 필요
         http
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .cors(cors -> cors.configurationSource(request -> {
-                    CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowedOrigins(Collections.singletonList("*")); // 추후에 서버 도메인으로 변경 필요
-                    config.setAllowedMethods(Collections.singletonList("*"));
-                    config.setAllowedHeaders(Collections.singletonList("*"));
-                    config.setAllowCredentials(true);
-                    config.setExposedHeaders(List.of("Authorization"));
-                    config.setMaxAge(3600L);
-                    return config;
-                }))
-                .csrf(AbstractHttpConfigurer::disable)
-                .formLogin(AbstractHttpConfigurer::disable)
-                .httpBasic(AbstractHttpConfigurer::disable)
-                .logout(AbstractHttpConfigurer::disable)
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .cors(cors -> cors.configurationSource(request -> {
+                CorsConfiguration config = new CorsConfiguration();
+                config.setAllowedOrigins(Collections.singletonList("*")); // 추후에 서버 도메인으로 변경 필요
+                config.setAllowedMethods(Collections.singletonList("*"));
+                config.setAllowedHeaders(Collections.singletonList("*"));
+                config.setAllowCredentials(true);
+                config.setExposedHeaders(List.of("Authorization"));
+                config.setMaxAge(3600L);
+                return config;
+            }))
+            .csrf(AbstractHttpConfigurer::disable)
+            .formLogin(AbstractHttpConfigurer::disable)
+            .httpBasic(AbstractHttpConfigurer::disable)
+            .logout(AbstractHttpConfigurer::disable)
+            // requestMatchers 설정
+            .authorizeHttpRequests(requests -> requests
+                .requestMatchers("/oauth2/**", "/api/api-docs", "/api/v3/api-docs", "/api/swagger-ui/**")
+                .permitAll()
+                .anyRequest().authenticated()
+            )
 
-                // requestMatchers 설정
-                .authorizeHttpRequests(requests -> requests
-                        .requestMatchers("/oauth2/**").permitAll()
-                        .anyRequest().authenticated()
-                )
+            // oauth2 설정
+            .oauth2Login(customizer -> customizer
+                .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+                .successHandler(oAuth2SuccessHandler)
+            )
 
-                // oauth2 설정
-                .oauth2Login(customizer -> customizer
-                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
-                        .successHandler(oAuth2SuccessHandler)
-                )
-
-                // jwt 설정
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
-                .addFilterBefore(new JwtExceptionFilter(), jwtAuthFilter.getClass());
+            // jwt 설정
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
+            .addFilterBefore(new JwtExceptionFilter(), jwtAuthFilter.getClass());
 
         return http.build();
     }
